<resources>
    <string name="app_name">TrackMyJob</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ClockIn">Clock In</string>
    <string name="ClockOut">Clock Out</string>

    <string name="notify">Notification</string>
    <string name="sign_out">Sign Out</string>

    <string name="ListClockEvents">View Clock Events</string>
    <string name="CurrentEvent">Current Clock</string>
    <string name="eventDateTime">Date Time</string>
    <string name="CurrentEventDate">Date Time</string>
    <string name="ClockEventPlaceholder">Unknown</string>


    <!-- Shared Prefs Key-->
    <string name="pref_clockevent_event_key">STOREDEVENTKEY</string>
    <string name="pref_clockevent_date_key">STOREDEVENTDATE</string>

    <!-- Holiday List View Item-->
    <string name="HolidayStartDate">Start Date :</string>
    <string name="Hours">Hours :</string>
    <string name="Minutes">Minutes :</string>
    <string name="HolidayType">Type :</string>
    <string name="HolidayAttended">Attended :</string>

    <string name="AddHoliday">New Holiday</string>


    <!-- Notification Channel Content -->
    <string name="channel_name">TrackMyJob</string>
    <string name="channel_description">Tracking of my work clock ins</string>
    <string name="ListHolidays">View Holidays</string>
    <string name="ClockStats">Clock Event Stats</string>
    <string name="eventType">Event Type</string>
    <string name="EventSubType">Sub Type</string>
    <string name="eventAutomatic">Automated</string>
</resources>
