<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClockEventFragment">

    <LinearLayout
        android:id="@+id/linearContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linLayoutCurrentClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_CurrentEventTitle"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:text="@string/CurrentEvent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_CurrentClockEvent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ClockEventPlaceholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_CurrentEventDate"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:text="@string/CurrentEventDate"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_CurrentClockEventDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="Test"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_ClockIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/ClockIn" />

        <Button
            android:id="@+id/btn_ClockOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClockOut" />

        <Button
            android:id="@+id/btn_ClockList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/ListClockEvents" />

        <Button
            android:id="@+id/btn_HolidayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListHolidays" />

        <Button
            android:id="@+id/btn_ClockStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClockStats" />

    </LinearLayout>
</LinearLayout>