<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_weight="1"-->
        <!--android:text="This is a Holiday!!" />-->

    <!-- Start Date-->
    <LinearLayout
        android:id="@+id/Lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/HolidayStartDate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewStartDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- End Date -->
    <LinearLayout
        android:id="@+id/Lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Hours"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewHours"
            android:layout_width="75dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/Minutes"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtViewMinutes"
            android:layout_width="75dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Type -->
    <LinearLayout
        android:id="@+id/Lin3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/HolidayType"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewHolidayType"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Attended -->
    <LinearLayout
        android:id="@+id/Lin4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/HolidayAttended"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewHolidayStatus"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
